<resources>
    <string name="app_name">Project-2-paw</string>
    <string name="p_a_w">P.A.W.</string>
    <string name="pet_activity_and_wellness">Pet Activity and Wellness</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome!</string>
    <string name="list_of_pets">List of Pets</string>
    <string name="add_pet">Add Pet</string>
    <string name="create_a_new_pet">Create a new pet</string>
    <string name="pet_name">Pet Name</string>
    <string name="pet_age">Pet Age</string>
    <string name="save_pet">Save Pet</string>
    <string name="tasks">Tasks</string>
    <string name="users">Users</string>
    <string name="back">Back</string>
    <string name="pet_name_title">Pet Name</string>
    <string name="add_task">Add Task</string>
    <string name="completed">Completed</string>
    <string name="care_to_dos">Care To-dos</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="task_name">Task name</string>
</resources>