<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PetCreation">

    <TextView
        android:id="@+id/newPetHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_pet"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/petNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pet_name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/newPetHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/petAgeInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pet_age"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/petNameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <Spinner
        android:id="@+id/petSpeciesSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/petAgeInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/savePetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_pet"
        app:layout_constraintTop_toBottomOf="@id/petSpeciesSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>