<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminPageActivity">

    <TextView
        android:id="@+id/adminTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Admin"
        android:textSize="24sp"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/adminSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Manage users and tasks"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/adminTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnManageUsers"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:text="@string/users"
        android:textSize="14sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/adminSubtitle"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnManageTasks"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:text="@string/tasks"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/btnManageUsers"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnManagePets"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:text="Pets"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/btnManageTasks"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/adminButtonRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnBackAdmin"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/back"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>