<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskFormActivity">

    <TextView
        android:id="@+id/taskFormTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Task"
        android:textSize="24sp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/taskNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/taskFormTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTaskName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/taskNameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text" />

    <TextView
        android:id="@+id/dueDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Due date (DD-MM-YYYY)"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/editTaskName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editDueDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/dueDateLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="e.g. 12-09-2025 or leave blank"
        android:inputType="date" />

    <Button
        android:id="@+id/saveTaskButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/save"
        android:textSize="14sp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <Button
        android:id="@+id/cancelTaskButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/cancel"
        android:textSize="14sp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>